grid layout issue fixed

--- a/index.css
+++ b/index.css
@@ -7,15 +7,17 @@
   width: 100%;
   height: 160px;
   text-align: center;
+  margin-bottom: 5px;
 }
 .navbar {
   background-color: rgb(25, 170, 196);
-  height: 60px;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin: 10px 0;
+  flex-wrap: wrap;
+  margin: 5px 0;
 }
 .navbar div {
   width: 10rem;
@@ -23,16 +25,16 @@
   color: rgb(65, 128, 221);
   background-color: #fff;
   margin: 5px;
+
 }
 .content_area {
   display: flex;
-  height: 450px;
+  height: auto;
   background-color: rgb(255, 255, 255);
-  margin-top: 5px;
 }
 .content_area .box1,
 .content_area .box2 {
-  width: 40%;
+  flex: 40%;
   height: 60vh;
   margin: 5px;
 }
@@ -40,7 +42,7 @@
 background-color: rgb(134, 231, 235);
 }
 .content_area .box3 {
-  width: 20%;
+  flex: 20%;
   margin: 5px;
   height: 60vh;
 }
@@ -58,12 +60,14 @@ background-color: rgb(134, 231, 235);
   height: 70%;
   width: 100%;
   overflow: hidden;
+  justify-content: center;
 }
 .box1 .image {
   width: 100%;
   grid-row: 1/2;
   grid-column: 1/4;
   overflow: hidden;
+  
 }
 .box1 .smallImg {
   width: 100%;
@@ -71,9 +75,21 @@ background-color: rgb(134, 231, 235);
   grid-column: span 1;
   overflow: hidden;
 }
+@media screen and (max-width:1024px) {
+  .content_area {
+    flex-direction: column;
+  }
+  .box1,
+  .box2,
+  .box3 {
+  flex: 100%;
+  width: 100%;
+  }
+}
 .box2{
   padding: 5px;
-  overflow: hidden;
+  height: auto;
+  overflow-y: scroll;
 }
 .box2 h1{
   margin-bottom: 5px;
